--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,16 @@
     </dependencies>
 
     <build>
+             <build>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+       <encoding>UTF-8</encoding>
+        </resource>
+             </resources>
+                  </build>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
