--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>17</java.version>
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <sonar.projectKey>kaddem-SalmaMEJRI-G3-5ARCTIC4</sonar.projectKey>
@@ -75,7 +76,6 @@
         <resource>
             <directory>src/main/resources</directory>
             <filtering>true</filtering>
-       <encoding>UTF-8</encoding>
         </resource>
              </resources>
                   </build>
