--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,42 +3,41 @@ version: "3.8"
 services:
   mysqldb:
     image: mysql:8.0
+    container_name: mysqldb
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: kaddem
-
     ports:
       - "3306:3306"
     volumes:
       - db:/var/lib/mysql
 
-  app-kaddem:
+  backend:
+    image: jassem145/kaddem-app:latest
+    container_name: backend
     depends_on:
       - mysqldb
-    image: salma508/kaddem-app:latest
-    restart: on-failure
     ports:
       - "8089:8089"
+    restart: on-failure
     environment:
-      SPRING_APPLICATION_JSON: |
-        {
-              "spring.datasource.url": "jdbc:mysql://mysqldb:3306/kaddem?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false",
-              "spring.datasource.username": "root",
-              "spring.datasource.password": "root",
-              "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL8Dialect",
-              "spring.jpa.hibernate.ddl-auto": "update"
-        }
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/kaddem?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.MySQL8Dialect
     stdin_open: true
     tty: true
 
-  fangular-app:
-    image: salma508/kaddem-frontend:latest
-    ports:
-      - "80:80"  
-    restart: always
+  frontend:
+    image: jassem145/kaddem-frontend:latest
+    container_name: frontend
     depends_on:
-      - app-kaddem
+      - backend
+    ports:
+      - "80:80"
+    restart: always
+
 volumes:
   db:
-  
