--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 #server.servlet.context-path=/kaddem
 #server.port=8089
 ##spring.datasource.url=jdbc:mysql://localhost:3306/kaddem\db?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://mysqldb:3306/kaddem?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#management.endpoints.web.exposure.include=*
-#management.endpoint.prometheus.enabled=true
-#allowed.origin=http://192.168.33.10:80
 
-# --- Configuration de la base de données ---
-spring.datasource.url=jdbc:mysql://localhost:3306/kaddem?useSSL=false&serverTimezone=UTC
+
+
+# --- Configuration de la base de donnÃ©es ---
+#spring.datasource.url=jdbc:mysql://localhost:3306/kaddem?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysqldb:3306/kaddem?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -24,8 +23,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# --- (Optionnel) Formatage lisible des requêtes SQL ---
+# --- (Optionnel) Formatage lisible des requÃªtes SQL ---
 spring.jpa.properties.hibernate.format_sql=true
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+
+allowed.origin=http://172.31.26.194:80
 
 # --- (Optionnel) Port du serveur Spring Boot ---
 server.port=8089
