--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@
 
 
 # --- Configuration de la base de données ---
-#spring.datasource.url=jdbc:mysql://localhost:3306/kaddem?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://mysqldb:3306/kaddem?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/kaddem?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/kaddem?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -27,7 +27,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
 management.endpoints.web.exposure.include=*
-management.endpoint.prometheus.enabled=true
 
 allowed.origin=http://172.31.26.194:80
 
