--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,12 +1,6 @@
-# Build stage
-FROM node:18 AS builder
-WORKDIR /app
-COPY . .
-RUN npm install
-RUN npm run build
-
-# Production stage
-FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+FROM nginx:1.23
+WORKDIR /usr/share/nginx/html
+RUN rm -rf ./*
+COPY dist/kaddem/ ./
+COPY default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
